add several ipynb notebooks to show usage

--- a/barchartapi/get_portfolio_var.ipynb
+++ b/barchartapi/get_portfolio_var.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## get_stock_correlations - \n",
+    "## get_portfolio_var - \n",
     "1. Use the barchart api to retrieve stock historical data;\n",
     "2. Create a correlation matrix from the historical data; \n",
     "3. Get standard deviations from the historical data;\n",
@@ -69,28 +69,6 @@
    "metadata": {},
    "source": [
     "___\n",
-    "### Refresh CSV files.  \n",
-    "* Set delete_old_csv_file to True if you want to re-retrieve the csv files that we use in the analysis\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# true will cause barchartapi to refetch csv data, \n",
-    "#   false will cause it to bypass any short_name that already has a csv file in the path sn_path below\n",
-    "delete_old_csv_file = False \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
     "### Create paths to where you will store the history data"
    ]
   },
@@ -100,9 +78,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DROPBOX_MARKET_DATA_DIR = expanduser('~/Dropbox/market_data')\n",
-    "# STOCKS_DIR = f'{DROPBOX_MARKET_DATA_DIR}/stocks'\n",
-    "# !ls {STOCKS_DIR}\n",
     "STOCKS_DIR = f'./temp_folder/stocks'\n",
     "try:\n",
     "    os.makedirs(STOCKS_DIR)\n",
@@ -132,8 +107,8 @@
     "endpoint = 'free' # free or paid\n",
     "\n",
     "# set the bar_type and the interval\n",
-    "bar_type='minutes' # minutes, daily, monthly\n",
-    "interval=30 # 1,5,15,30,60\n",
+    "bar_type='daily' # minutes, daily, monthly\n",
+    "interval=1 # 1,5,15,30,60\n",
     "\n",
     "# create an instance \n",
     "api_key = open(f'./temp_folder/{endpoint}_api_key.txt','r').read()\n",
@@ -142,11 +117,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set delete_old_csv_file to True if you want to re-retrieve the csv files that we use in the analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# true will cause barchartapi to refetch csv data, \n",
+    "#   false will cause it to bypass any short_name that already has a csv file in the path sn_path below\n",
+    "delete_old_csv_file = False "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a method to read your csv portfolio file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a method to retrieve the portfolio\n",
     "def get_portfolio(csv_path=None):\n",
     "    '''\n",
     "    fetch a portfolio to use below\n",
@@ -165,7 +166,13 @@
    "metadata": {},
    "source": [
     "### Get your portfolio\n",
-    "(default is ./hi_volume_stocks.csv)"
+    "1. Enter **portfolio_folder_to_search** : a folder to search for a portfolio csv\n",
+    "2. Enter **portfolio_csv_name** : a csv file name in that folder that has 2 columns:\n",
+    " * symbol column\n",
+    " * position column\n",
+    " *   \n",
+    "\n",
+    "3. (default is ./hi_volume_stocks.csv)"
    ]
   },
   {
@@ -174,8 +181,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_tuple = get_portfolio()\n",
-    "df_portfolio = p_tuple[0]"
+    "# enter a folder and a name\n",
+    "portfolio_folder_to_search = '.'\n",
+    "portfolio_csv_name = 'fxe_portfolio.csv'\n",
+    "\n",
+    "csv_file = portfolio_folder_to_search + \"/\" + portfolio_csv_name\n",
+    "print('possible csvs: ',list(filter(lambda d: '.csv' in str(d).lower(),os.listdir(portfolio_folder_to_search))))\n",
+    "p_tuple = get_portfolio(csv_file)\n",
+    "df_portfolio = p_tuple[0]\n",
+    "print('names in portfolio',p_tuple[1])"
    ]
   },
   {
@@ -219,13 +233,14 @@
     "equity_etf_names = ['DIA','SPY','QQQ']\n",
     "commodity_etf_short_names = ['USO','UNG','DBC','DBA','GLD','USCI']\n",
     "currency_etf_short_names = ['FXY','FXE','FXB','FXF','FXC','FXA']\n",
-    "# my_portfolio_short_names = ['XLE','SPY','USO','GLD','XLU','QQQ']\n",
+    "all_names = spydr_short_names + equity_etf_names + commodity_etf_short_names + currency_etf_short_names + commodity_etf_short_names\n",
     "\n",
     "# get the portfolio\n",
+    "port_names = p_tuple[1]\n",
     "\n",
     "# set short_names to the desired list to get\n",
     "short_names = list(set(\n",
-    "    p_tuple[1] + spydr_short_names + equity_etf_names + commodity_etf_short_names + currency_etf_short_names + commodity_etf_short_names))\n",
+    "    port_names + spydr_short_names + ['SPY']))\n",
     "\n",
     "for short_name in short_names:\n",
     "    sn_path = f'{STOCKS_DIR}/{short_name}.csv'\n",
@@ -252,6 +267,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First create correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "days_of_std = 60"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -260,7 +291,7 @@
     "df_hist = None\n",
     "for short_name in short_names:\n",
     "    sn_path = f'{STOCKS_DIR}/{short_name}.csv'\n",
-    "    df_temp = pd.read_csv(sn_path)\n",
+    "    df_temp = pd.read_csv(sn_path).iloc[-1*days_of_std:]\n",
     "    df_temp = df_temp[['timestamp','close']]\n",
     "    df_temp = df_temp.rename(columns={'close':f'{short_name}'})\n",
     "    if df_hist is None:\n",
@@ -272,13 +303,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next create standard deviations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = list(set(list(df_hist.columns.values))-set(['timestamp']))\n",
-    "bars_per_day = 8*2\n",
+    "bars_per_day = 1\n",
+    "if bar_type.lower()!='daily':\n",
+    "    if bar_type.lower()=='minutes':\n",
+    "        bars_per_day = 8*2\n",
     "perc_of_day = 1/bars_per_day\n",
     "perc_of_year = perc_of_day/256\n",
     "std_series = df_hist[cols].pct_change().iloc[1:].std()/perc_of_year**.5\n",
@@ -384,8 +425,7 @@
     "var_days = 1\n",
     "spy_usual_daily_std = .16 \n",
     "port_std = (df_positions_3.position_var.astype(float).as_matrix().T @ df_corr.astype(float).as_matrix() @ df_positions_3.position_var.astype(float).as_matrix())**.5\n",
-    "# port_var = port_variance**.5 * var_days**.5  * norm.ppf(VAR_CONFIDENCE) \n",
-    "port_var = port_std * var_days**.5  * norm.ppf(VAR_CONFIDENCE) \n",
+    "port_var = port_std * var_days**.5  \n",
     "spy_curr_unit_var = float(df_std[df_std.symbol=='SPY'].stdev) * (var_days/256)**.5  * norm.ppf(VAR_CONFIDENCE) \n",
     "sp_dollar_equiv = port_var / spy_curr_unit_var \n",
     "\n"
