improvements to bchist_basic.ipynb and futures_series.ipynb

--- a/barchartapi/bchist_basic.ipynb
+++ b/barchartapi/bchist_basic.ipynb
@@ -16,6 +16,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n",
+      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
+     ]
     }
    ],
    "source": [
@@ -49,9 +57,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n",
+      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'plot_utilities' from '/Users/bperlman1/Documents/billybyte/pyliverisk/barchartapi/barchartapi/plot_utilities.py'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import importlib\n",
     "importlib.reload(pu)"
@@ -59,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +102,8 @@
     "endpoint = 'free' # free or paid\n",
     "\n",
     "# set the bar_type and the interval\n",
-    "bar_type='minutes' # minutes, daily, monthly\n",
-    "interval=30 # 1,5,15,30,60\n",
+    "bar_type='daily' # minutes, daily, monthly\n",
+    "interval=1 # 1,5,15,30,60\n",
     "\n",
     "# create an instance \n",
     "api_key = open(f'./temp_folder/{endpoint}_api_key.txt','r').read()\n",
@@ -86,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_history: CLZ19 WRITING DATA 2019-04-18 16:05:47.604134\n",
-      "get_history: CLZ19 END 2019-04-18 16:05:47.607695\n"
+      "get_history: HOZ19 WRITING DATA 2019-06-14 07:05:21.561326\n",
+      "get_history: HOZ19 END 2019-06-14 07:05:21.565284\n"
      ]
     },
     {
@@ -122,6 +149,7 @@
        "      <th>high</th>\n",
        "      <th>low</th>\n",
        "      <th>open</th>\n",
+       "      <th>openInterest</th>\n",
        "      <th>symbol</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>tradingDay</th>\n",
@@ -131,93 +159,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>967</th>\n",
-       "      <td>63.14</td>\n",
-       "      <td>63.45</td>\n",
-       "      <td>63.12</td>\n",
-       "      <td>63.36</td>\n",
-       "      <td>CLZ19</td>\n",
-       "      <td>2019-04-17T09:30:00-05:00</td>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>279</td>\n",
-       "      <td>2019-04-17 09:30:00</td>\n",
+       "      <th>78</th>\n",
+       "      <td>1.8634</td>\n",
+       "      <td>1.8707</td>\n",
+       "      <td>1.8304</td>\n",
+       "      <td>1.8448</td>\n",
+       "      <td>48460</td>\n",
+       "      <td>HOZ19</td>\n",
+       "      <td>2019-06-07T00:00:00-05:00</td>\n",
+       "      <td>2019-06-07</td>\n",
+       "      <td>13421</td>\n",
+       "      <td>2019-06-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>968</th>\n",
-       "      <td>63.33</td>\n",
-       "      <td>63.38</td>\n",
-       "      <td>63.12</td>\n",
-       "      <td>63.15</td>\n",
-       "      <td>CLZ19</td>\n",
-       "      <td>2019-04-17T10:00:00-05:00</td>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>731</td>\n",
-       "      <td>2019-04-17 10:00:00</td>\n",
+       "      <th>79</th>\n",
+       "      <td>1.8448</td>\n",
+       "      <td>1.8785</td>\n",
+       "      <td>1.8396</td>\n",
+       "      <td>1.8785</td>\n",
+       "      <td>47955</td>\n",
+       "      <td>HOZ19</td>\n",
+       "      <td>2019-06-10T00:00:00-05:00</td>\n",
+       "      <td>2019-06-10</td>\n",
+       "      <td>7187</td>\n",
+       "      <td>2019-06-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>969</th>\n",
-       "      <td>63.41</td>\n",
-       "      <td>63.45</td>\n",
-       "      <td>63.23</td>\n",
-       "      <td>63.33</td>\n",
-       "      <td>CLZ19</td>\n",
-       "      <td>2019-04-17T10:30:00-05:00</td>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>268</td>\n",
-       "      <td>2019-04-17 10:30:00</td>\n",
+       "      <th>80</th>\n",
+       "      <td>1.8591</td>\n",
+       "      <td>1.8674</td>\n",
+       "      <td>1.8454</td>\n",
+       "      <td>1.8500</td>\n",
+       "      <td>44753</td>\n",
+       "      <td>HOZ19</td>\n",
+       "      <td>2019-06-11T00:00:00-05:00</td>\n",
+       "      <td>2019-06-11</td>\n",
+       "      <td>17552</td>\n",
+       "      <td>2019-06-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>63.41</td>\n",
-       "      <td>63.47</td>\n",
-       "      <td>63.34</td>\n",
-       "      <td>63.43</td>\n",
-       "      <td>CLZ19</td>\n",
-       "      <td>2019-04-17T11:00:00-05:00</td>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>292</td>\n",
-       "      <td>2019-04-17 11:00:00</td>\n",
+       "      <th>81</th>\n",
+       "      <td>1.8165</td>\n",
+       "      <td>1.8466</td>\n",
+       "      <td>1.8085</td>\n",
+       "      <td>1.8464</td>\n",
+       "      <td>43275</td>\n",
+       "      <td>HOZ19</td>\n",
+       "      <td>2019-06-12T00:00:00-05:00</td>\n",
+       "      <td>2019-06-12</td>\n",
+       "      <td>10900</td>\n",
+       "      <td>2019-06-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>63.38</td>\n",
-       "      <td>63.46</td>\n",
-       "      <td>63.36</td>\n",
-       "      <td>63.43</td>\n",
-       "      <td>CLZ19</td>\n",
-       "      <td>2019-04-17T11:30:00-05:00</td>\n",
-       "      <td>2019-04-17</td>\n",
-       "      <td>145</td>\n",
-       "      <td>2019-04-17 11:30:00</td>\n",
+       "      <th>82</th>\n",
+       "      <td>1.8446</td>\n",
+       "      <td>1.8724</td>\n",
+       "      <td>1.8080</td>\n",
+       "      <td>1.8113</td>\n",
+       "      <td>42738</td>\n",
+       "      <td>HOZ19</td>\n",
+       "      <td>2019-06-13T00:00:00-05:00</td>\n",
+       "      <td>2019-06-13</td>\n",
+       "      <td>10416</td>\n",
+       "      <td>2019-06-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     close   high    low   open symbol                  timestamp  tradingDay  \\\n",
-       "967  63.14  63.45  63.12  63.36  CLZ19  2019-04-17T09:30:00-05:00  2019-04-17   \n",
-       "968  63.33  63.38  63.12  63.15  CLZ19  2019-04-17T10:00:00-05:00  2019-04-17   \n",
-       "969  63.41  63.45  63.23  63.33  CLZ19  2019-04-17T10:30:00-05:00  2019-04-17   \n",
-       "970  63.41  63.47  63.34  63.43  CLZ19  2019-04-17T11:00:00-05:00  2019-04-17   \n",
-       "971  63.38  63.46  63.36  63.43  CLZ19  2019-04-17T11:30:00-05:00  2019-04-17   \n",
+       "     close    high     low    open  openInterest symbol  \\\n",
+       "78  1.8634  1.8707  1.8304  1.8448         48460  HOZ19   \n",
+       "79  1.8448  1.8785  1.8396  1.8785         47955  HOZ19   \n",
+       "80  1.8591  1.8674  1.8454  1.8500         44753  HOZ19   \n",
+       "81  1.8165  1.8466  1.8085  1.8464         43275  HOZ19   \n",
+       "82  1.8446  1.8724  1.8080  1.8113         42738  HOZ19   \n",
        "\n",
-       "     volume                date  \n",
-       "967     279 2019-04-17 09:30:00  \n",
-       "968     731 2019-04-17 10:00:00  \n",
-       "969     268 2019-04-17 10:30:00  \n",
-       "970     292 2019-04-17 11:00:00  \n",
-       "971     145 2019-04-17 11:30:00  "
+       "                    timestamp  tradingDay  volume       date  \n",
+       "78  2019-06-07T00:00:00-05:00  2019-06-07   13421 2019-06-07  \n",
+       "79  2019-06-10T00:00:00-05:00  2019-06-10    7187 2019-06-10  \n",
+       "80  2019-06-11T00:00:00-05:00  2019-06-11   17552 2019-06-11  \n",
+       "81  2019-06-12T00:00:00-05:00  2019-06-12   10900 2019-06-12  \n",
+       "82  2019-06-13T00:00:00-05:00  2019-06-13   10416 2019-06-13  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yy = str(datetime.datetime.now().year)[2:]\n",
-    "short_name = f'CLZ{yy}'\n",
+    "short_name = f'HOZ{yy}'\n",
     "days_to_fetch = 120\n",
     "\n",
     "dt_end = datetime.datetime.now()\n",
