additions to futures_series.ipynb

--- a/barchartapi/bchist_basic.ipynb
+++ b/barchartapi/bchist_basic.ipynb
@@ -57,28 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n",
-      "Barchart OnDemand Client: https://marketdata.websol.barchart.com/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<module 'plot_utilities' from '/Users/bperlman1/Documents/billybyte/pyliverisk/barchartapi/barchartapi/plot_utilities.py'>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import importlib\n",
     "importlib.reload(pu)"
@@ -86,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -596,6 +577,338 @@
    "source": [
     "### End"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "status,df_clx19 = bch.get_history('CLX19',20190801,20191001)\n",
+    "status,df_xle = bch.get_history('XLE',20190801,20191001)\n",
+    "df_clx19['pct_cl'] = df_clx19.close.pct_change()\n",
+    "df_xle['pct_xle'] = df_xle.close.pct_change()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['close', 'high', 'low', 'open', 'openInterest', 'symbol',\n",
+       "       'timestamp', 'tradingDay', 'volume', 'pct_cl'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_both = df_clx19[['tradingDay','pct_cl']].merge(df_xle[['tradingDay','pct_xle']],on='tradingDay',how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tradingDay</th>\n",
+       "      <th>pct_cl</th>\n",
+       "      <th>pct_xle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-08-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-08-02</td>\n",
+       "      <td>0.030168</td>\n",
+       "      <td>-0.014360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-08-05</td>\n",
+       "      <td>-0.021739</td>\n",
+       "      <td>-0.029801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>-0.016896</td>\n",
+       "      <td>-0.001195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-08-07</td>\n",
+       "      <td>-0.048197</td>\n",
+       "      <td>-0.007518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019-08-08</td>\n",
+       "      <td>0.026300</td>\n",
+       "      <td>0.028748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2019-08-09</td>\n",
+       "      <td>0.034423</td>\n",
+       "      <td>-0.011044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2019-08-12</td>\n",
+       "      <td>0.008319</td>\n",
+       "      <td>-0.011844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2019-08-13</td>\n",
+       "      <td>0.042721</td>\n",
+       "      <td>0.009247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2019-08-14</td>\n",
+       "      <td>-0.033058</td>\n",
+       "      <td>-0.039192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2019-08-15</td>\n",
+       "      <td>-0.016367</td>\n",
+       "      <td>-0.006180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2019-08-16</td>\n",
+       "      <td>0.006101</td>\n",
+       "      <td>0.013149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2019-08-19</td>\n",
+       "      <td>0.023705</td>\n",
+       "      <td>0.022098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2019-08-20</td>\n",
+       "      <td>0.001616</td>\n",
+       "      <td>-0.008408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2019-08-21</td>\n",
+       "      <td>-0.005556</td>\n",
+       "      <td>0.006402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2019-08-22</td>\n",
+       "      <td>-0.005947</td>\n",
+       "      <td>-0.004470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2019-08-23</td>\n",
+       "      <td>-0.020667</td>\n",
+       "      <td>-0.033506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2019-08-26</td>\n",
+       "      <td>-0.009626</td>\n",
+       "      <td>0.004289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2019-08-27</td>\n",
+       "      <td>0.023738</td>\n",
+       "      <td>-0.006228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2019-08-28</td>\n",
+       "      <td>0.015154</td>\n",
+       "      <td>0.014324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2019-08-29</td>\n",
+       "      <td>0.015288</td>\n",
+       "      <td>0.014651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2019-08-30</td>\n",
+       "      <td>-0.027635</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2019-09-03</td>\n",
+       "      <td>-0.020587</td>\n",
+       "      <td>-0.004871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2019-09-04</td>\n",
+       "      <td>0.043527</td>\n",
+       "      <td>0.013986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2019-09-05</td>\n",
+       "      <td>0.001070</td>\n",
+       "      <td>0.012414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2019-09-06</td>\n",
+       "      <td>0.004808</td>\n",
+       "      <td>0.005279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2019-09-09</td>\n",
+       "      <td>0.023037</td>\n",
+       "      <td>0.019990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2019-09-10</td>\n",
+       "      <td>-0.007622</td>\n",
+       "      <td>0.011792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2019-09-11</td>\n",
+       "      <td>-0.028277</td>\n",
+       "      <td>0.000985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2019-09-12</td>\n",
+       "      <td>-0.011137</td>\n",
+       "      <td>-0.006232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2019-09-13</td>\n",
+       "      <td>-0.004541</td>\n",
+       "      <td>0.007921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2019-09-16</td>\n",
+       "      <td>0.143613</td>\n",
+       "      <td>0.033563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2019-09-17</td>\n",
+       "      <td>-0.056965</td>\n",
+       "      <td>-0.013939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2019-09-18</td>\n",
+       "      <td>-0.017936</td>\n",
+       "      <td>-0.004819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>0.002584</td>\n",
+       "      <td>-0.002583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    tradingDay    pct_cl   pct_xle\n",
+       "0   2019-08-01       NaN       NaN\n",
+       "1   2019-08-02  0.030168 -0.014360\n",
+       "2   2019-08-05 -0.021739 -0.029801\n",
+       "3   2019-08-06 -0.016896 -0.001195\n",
+       "4   2019-08-07 -0.048197 -0.007518\n",
+       "5   2019-08-08  0.026300  0.028748\n",
+       "6   2019-08-09  0.034423 -0.011044\n",
+       "7   2019-08-12  0.008319 -0.011844\n",
+       "8   2019-08-13  0.042721  0.009247\n",
+       "9   2019-08-14 -0.033058 -0.039192\n",
+       "10  2019-08-15 -0.016367 -0.006180\n",
+       "11  2019-08-16  0.006101  0.013149\n",
+       "12  2019-08-19  0.023705  0.022098\n",
+       "13  2019-08-20  0.001616 -0.008408\n",
+       "14  2019-08-21 -0.005556  0.006402\n",
+       "15  2019-08-22 -0.005947 -0.004470\n",
+       "16  2019-08-23 -0.020667 -0.033506\n",
+       "17  2019-08-26 -0.009626  0.004289\n",
+       "18  2019-08-27  0.023738 -0.006228\n",
+       "19  2019-08-28  0.015154  0.014324\n",
+       "20  2019-08-29  0.015288  0.014651\n",
+       "21  2019-08-30 -0.027635  0.000000\n",
+       "22  2019-09-03 -0.020587 -0.004871\n",
+       "23  2019-09-04  0.043527  0.013986\n",
+       "24  2019-09-05  0.001070  0.012414\n",
+       "25  2019-09-06  0.004808  0.005279\n",
+       "26  2019-09-09  0.023037  0.019990\n",
+       "27  2019-09-10 -0.007622  0.011792\n",
+       "28  2019-09-11 -0.028277  0.000985\n",
+       "29  2019-09-12 -0.011137 -0.006232\n",
+       "30  2019-09-13 -0.004541  0.007921\n",
+       "31  2019-09-16  0.143613  0.033563\n",
+       "32  2019-09-17 -0.056965 -0.013939\n",
+       "33  2019-09-18 -0.017936 -0.004819\n",
+       "34  2019-09-19  0.002584 -0.002583"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
