minor changes to bchist_basic.ipynb, etc

--- a/barchartapi/futures_merge.ipynb
+++ b/barchartapi/futures_merge.ipynb
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "print(df.as_matrix().shape)\n",
+    "print(df.values.shape)\n",
     "df.columns.values"
    ]
   },
@@ -321,7 +321,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "df2 = futs.proc_df(df)\n",
-    "print(df2.as_matrix().shape)\n",
+    "print(df2.values.shape)\n",
     "df2.columns.values\n"
    ]
   },
