--- a/barchartapi/bchist_basic.ipynb
+++ b/barchartapi/bchist_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "<module 'plot_utilities' from '/Users/bperlman1/Documents/billybyte/pyliverisk/barchartapi/barchartapi/plot_utilities.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,17 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cb = bch.get_history('CLU19',20190610,20190628)\n"
+    "df_cb = bch.get_history('SIY00',20190212,20190812)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -161,267 +163,172 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-07-26T00:00:00-05:00</td>\n",
-       "      <td>2019-07-26</td>\n",
-       "      <td>55.93</td>\n",
-       "      <td>56.57</td>\n",
-       "      <td>55.68</td>\n",
-       "      <td>56.20</td>\n",
-       "      <td>476785</td>\n",
-       "      <td>410680</td>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2019-08-12T00:00:00-05:00</td>\n",
+       "      <td>2019-08-12</td>\n",
+       "      <td>16.9470</td>\n",
+       "      <td>17.0970</td>\n",
+       "      <td>16.8100</td>\n",
+       "      <td>17.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-07-29T00:00:00-05:00</td>\n",
-       "      <td>2019-07-29</td>\n",
-       "      <td>56.20</td>\n",
-       "      <td>57.10</td>\n",
-       "      <td>55.81</td>\n",
-       "      <td>56.87</td>\n",
-       "      <td>529742</td>\n",
-       "      <td>411795</td>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2019-08-13T00:00:00-05:00</td>\n",
+       "      <td>2019-08-13</td>\n",
+       "      <td>17.0540</td>\n",
+       "      <td>17.4880</td>\n",
+       "      <td>16.8230</td>\n",
+       "      <td>16.9510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-07-30T00:00:00-05:00</td>\n",
-       "      <td>2019-07-30</td>\n",
-       "      <td>57.07</td>\n",
-       "      <td>58.47</td>\n",
-       "      <td>56.96</td>\n",
-       "      <td>58.05</td>\n",
-       "      <td>547401</td>\n",
-       "      <td>406009</td>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2019-08-14T00:00:00-05:00</td>\n",
+       "      <td>2019-08-14</td>\n",
+       "      <td>16.9550</td>\n",
+       "      <td>17.2950</td>\n",
+       "      <td>16.8740</td>\n",
+       "      <td>17.2010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-07-31T00:00:00-05:00</td>\n",
-       "      <td>2019-07-31</td>\n",
-       "      <td>58.34</td>\n",
-       "      <td>58.82</td>\n",
-       "      <td>57.81</td>\n",
-       "      <td>58.58</td>\n",
-       "      <td>614001</td>\n",
-       "      <td>402392</td>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2019-08-15T00:00:00-05:00</td>\n",
+       "      <td>2019-08-15</td>\n",
+       "      <td>17.2040</td>\n",
+       "      <td>17.3550</td>\n",
+       "      <td>17.1060</td>\n",
+       "      <td>17.2570</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-01T00:00:00-05:00</td>\n",
-       "      <td>2019-08-01</td>\n",
-       "      <td>57.85</td>\n",
-       "      <td>57.99</td>\n",
-       "      <td>53.59</td>\n",
-       "      <td>53.95</td>\n",
-       "      <td>886748</td>\n",
-       "      <td>403715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-02T00:00:00-05:00</td>\n",
-       "      <td>2019-08-02</td>\n",
-       "      <td>54.54</td>\n",
-       "      <td>56.05</td>\n",
-       "      <td>54.15</td>\n",
-       "      <td>55.66</td>\n",
-       "      <td>739810</td>\n",
-       "      <td>399849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-05T00:00:00-05:00</td>\n",
-       "      <td>2019-08-05</td>\n",
-       "      <td>55.38</td>\n",
-       "      <td>55.61</td>\n",
-       "      <td>54.22</td>\n",
-       "      <td>54.69</td>\n",
-       "      <td>823844</td>\n",
-       "      <td>384410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-06T00:00:00-05:00</td>\n",
-       "      <td>2019-08-06</td>\n",
-       "      <td>54.95</td>\n",
-       "      <td>55.42</td>\n",
-       "      <td>53.29</td>\n",
-       "      <td>53.63</td>\n",
-       "      <td>682794</td>\n",
-       "      <td>381492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-07T00:00:00-05:00</td>\n",
-       "      <td>2019-08-07</td>\n",
-       "      <td>53.42</td>\n",
-       "      <td>53.77</td>\n",
-       "      <td>50.52</td>\n",
-       "      <td>51.09</td>\n",
-       "      <td>1063214</td>\n",
-       "      <td>344560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-08T00:00:00-05:00</td>\n",
-       "      <td>2019-08-08</td>\n",
-       "      <td>52.33</td>\n",
-       "      <td>53.06</td>\n",
-       "      <td>51.94</td>\n",
-       "      <td>52.54</td>\n",
-       "      <td>724762</td>\n",
-       "      <td>301000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-09T00:00:00-05:00</td>\n",
-       "      <td>2019-08-09</td>\n",
-       "      <td>52.88</td>\n",
-       "      <td>54.92</td>\n",
-       "      <td>52.37</td>\n",
-       "      <td>54.50</td>\n",
-       "      <td>726386</td>\n",
-       "      <td>266871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-12T00:00:00-05:00</td>\n",
-       "      <td>2019-08-12</td>\n",
-       "      <td>54.32</td>\n",
-       "      <td>55.18</td>\n",
-       "      <td>53.54</td>\n",
-       "      <td>54.93</td>\n",
-       "      <td>611027</td>\n",
-       "      <td>227125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-13T00:00:00-05:00</td>\n",
-       "      <td>2019-08-13</td>\n",
-       "      <td>54.73</td>\n",
-       "      <td>57.47</td>\n",
-       "      <td>54.21</td>\n",
-       "      <td>57.10</td>\n",
-       "      <td>783486</td>\n",
-       "      <td>174139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-14T00:00:00-05:00</td>\n",
-       "      <td>2019-08-14</td>\n",
-       "      <td>56.74</td>\n",
-       "      <td>56.85</td>\n",
-       "      <td>53.97</td>\n",
-       "      <td>55.23</td>\n",
-       "      <td>718293</td>\n",
-       "      <td>137250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-15T00:00:00-05:00</td>\n",
-       "      <td>2019-08-15</td>\n",
-       "      <td>54.90</td>\n",
-       "      <td>55.33</td>\n",
-       "      <td>53.77</td>\n",
-       "      <td>54.47</td>\n",
-       "      <td>527866</td>\n",
-       "      <td>100019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>CLU19</td>\n",
+       "      <td>SIY00</td>\n",
        "      <td>2019-08-16T00:00:00-05:00</td>\n",
        "      <td>2019-08-16</td>\n",
-       "      <td>54.74</td>\n",
-       "      <td>55.67</td>\n",
-       "      <td>54.26</td>\n",
-       "      <td>54.87</td>\n",
-       "      <td>168345</td>\n",
-       "      <td>82935</td>\n",
+       "      <td>17.2610</td>\n",
+       "      <td>17.3080</td>\n",
+       "      <td>17.0400</td>\n",
+       "      <td>17.0860</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-19T00:00:00-05:00</td>\n",
-       "      <td>2019-08-19</td>\n",
-       "      <td>54.96</td>\n",
-       "      <td>56.41</td>\n",
-       "      <td>54.84</td>\n",
-       "      <td>56.21</td>\n",
-       "      <td>113571</td>\n",
-       "      <td>34638</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>CLU19</td>\n",
-       "      <td>2019-08-20T00:00:00-05:00</td>\n",
-       "      <td>2019-08-20</td>\n",
-       "      <td>56.10</td>\n",
-       "      <td>56.60</td>\n",
-       "      <td>55.28</td>\n",
-       "      <td>56.34</td>\n",
-       "      <td>29321</td>\n",
+       "      <th>124</th>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2020-02-04T00:00:00-06:00</td>\n",
+       "      <td>2020-02-04</td>\n",
+       "      <td>17.6591</td>\n",
+       "      <td>17.7624</td>\n",
+       "      <td>17.5240</td>\n",
+       "      <td>17.5819</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2020-02-05T00:00:00-06:00</td>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>17.5822</td>\n",
+       "      <td>17.6979</td>\n",
+       "      <td>17.4856</td>\n",
+       "      <td>17.5968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2020-02-06T00:00:00-06:00</td>\n",
+       "      <td>2020-02-06</td>\n",
+       "      <td>17.5980</td>\n",
+       "      <td>17.8367</td>\n",
+       "      <td>17.5800</td>\n",
+       "      <td>17.8053</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2020-02-07T00:00:00-06:00</td>\n",
+       "      <td>2020-02-07</td>\n",
+       "      <td>17.8114</td>\n",
+       "      <td>17.8894</td>\n",
+       "      <td>17.6418</td>\n",
+       "      <td>17.6773</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>SIY00</td>\n",
+       "      <td>2020-02-10T00:00:00-06:00</td>\n",
+       "      <td>2020-02-10</td>\n",
+       "      <td>17.6925</td>\n",
+       "      <td>17.8174</td>\n",
+       "      <td>17.6770</td>\n",
+       "      <td>17.7509</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>129 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   symbol                  timestamp  tradingDay   open   high    low  close  \\\n",
-       "0   CLU19  2019-07-26T00:00:00-05:00  2019-07-26  55.93  56.57  55.68  56.20   \n",
-       "1   CLU19  2019-07-29T00:00:00-05:00  2019-07-29  56.20  57.10  55.81  56.87   \n",
-       "2   CLU19  2019-07-30T00:00:00-05:00  2019-07-30  57.07  58.47  56.96  58.05   \n",
-       "3   CLU19  2019-07-31T00:00:00-05:00  2019-07-31  58.34  58.82  57.81  58.58   \n",
-       "4   CLU19  2019-08-01T00:00:00-05:00  2019-08-01  57.85  57.99  53.59  53.95   \n",
-       "5   CLU19  2019-08-02T00:00:00-05:00  2019-08-02  54.54  56.05  54.15  55.66   \n",
-       "6   CLU19  2019-08-05T00:00:00-05:00  2019-08-05  55.38  55.61  54.22  54.69   \n",
-       "7   CLU19  2019-08-06T00:00:00-05:00  2019-08-06  54.95  55.42  53.29  53.63   \n",
-       "8   CLU19  2019-08-07T00:00:00-05:00  2019-08-07  53.42  53.77  50.52  51.09   \n",
-       "9   CLU19  2019-08-08T00:00:00-05:00  2019-08-08  52.33  53.06  51.94  52.54   \n",
-       "10  CLU19  2019-08-09T00:00:00-05:00  2019-08-09  52.88  54.92  52.37  54.50   \n",
-       "11  CLU19  2019-08-12T00:00:00-05:00  2019-08-12  54.32  55.18  53.54  54.93   \n",
-       "12  CLU19  2019-08-13T00:00:00-05:00  2019-08-13  54.73  57.47  54.21  57.10   \n",
-       "13  CLU19  2019-08-14T00:00:00-05:00  2019-08-14  56.74  56.85  53.97  55.23   \n",
-       "14  CLU19  2019-08-15T00:00:00-05:00  2019-08-15  54.90  55.33  53.77  54.47   \n",
-       "15  CLU19  2019-08-16T00:00:00-05:00  2019-08-16  54.74  55.67  54.26  54.87   \n",
-       "16  CLU19  2019-08-19T00:00:00-05:00  2019-08-19  54.96  56.41  54.84  56.21   \n",
-       "17  CLU19  2019-08-20T00:00:00-05:00  2019-08-20  56.10  56.60  55.28  56.34   \n",
+       "    symbol                  timestamp  tradingDay     open     high      low  \\\n",
+       "0    SIY00  2019-08-12T00:00:00-05:00  2019-08-12  16.9470  17.0970  16.8100   \n",
+       "1    SIY00  2019-08-13T00:00:00-05:00  2019-08-13  17.0540  17.4880  16.8230   \n",
+       "2    SIY00  2019-08-14T00:00:00-05:00  2019-08-14  16.9550  17.2950  16.8740   \n",
+       "3    SIY00  2019-08-15T00:00:00-05:00  2019-08-15  17.2040  17.3550  17.1060   \n",
+       "4    SIY00  2019-08-16T00:00:00-05:00  2019-08-16  17.2610  17.3080  17.0400   \n",
+       "..     ...                        ...         ...      ...      ...      ...   \n",
+       "124  SIY00  2020-02-04T00:00:00-06:00  2020-02-04  17.6591  17.7624  17.5240   \n",
+       "125  SIY00  2020-02-05T00:00:00-06:00  2020-02-05  17.5822  17.6979  17.4856   \n",
+       "126  SIY00  2020-02-06T00:00:00-06:00  2020-02-06  17.5980  17.8367  17.5800   \n",
+       "127  SIY00  2020-02-07T00:00:00-06:00  2020-02-07  17.8114  17.8894  17.6418   \n",
+       "128  SIY00  2020-02-10T00:00:00-06:00  2020-02-10  17.6925  17.8174  17.6770   \n",
        "\n",
-       "     volume  openInterest  \n",
-       "0    476785        410680  \n",
-       "1    529742        411795  \n",
-       "2    547401        406009  \n",
-       "3    614001        402392  \n",
-       "4    886748        403715  \n",
-       "5    739810        399849  \n",
-       "6    823844        384410  \n",
-       "7    682794        381492  \n",
-       "8   1063214        344560  \n",
-       "9    724762        301000  \n",
-       "10   726386        266871  \n",
-       "11   611027        227125  \n",
-       "12   783486        174139  \n",
-       "13   718293        137250  \n",
-       "14   527866        100019  \n",
-       "15   168345         82935  \n",
-       "16   113571         34638  \n",
-       "17    29321             0  "
+       "       close  volume  openInterest  \n",
+       "0    17.0500       0             0  \n",
+       "1    16.9510       0             0  \n",
+       "2    17.2010       0             0  \n",
+       "3    17.2570       0             0  \n",
+       "4    17.0860       0             0  \n",
+       "..       ...     ...           ...  \n",
+       "124  17.5819       0             0  \n",
+       "125  17.5968       0             0  \n",
+       "126  17.8053       0             0  \n",
+       "127  17.6773       0             0  \n",
+       "128  17.7509       0             0  \n",
+       "\n",
+       "[129 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
