--- a/barchartapi/get_portfolio_var.ipynb
+++ b/barchartapi/get_portfolio_var.ipynb
@@ -366,7 +366,7 @@
    "outputs": [],
    "source": [
     "cols = list(filter(lambda c:'time' not in c,df_hist.columns.values))\n",
-    "vals = df_hist.iloc[-1:][cols].as_matrix().reshape(-1)\n",
+    "vals = df_hist.iloc[-1:][cols].values.reshape(-1)\n",
     "df_prices = pd.DataFrame({'symbol':cols,'price':vals})[['symbol','price']]\n",
     "df_prices"
    ]
@@ -432,7 +432,7 @@
     "# create an spy standard deviation that is the historical average\n",
     "var_days = 1\n",
     "spy_usual_daily_std = .16 \n",
-    "port_std = (df_positions_3.position_var.astype(float).as_matrix().T @ df_corr.astype(float).as_matrix() @ df_positions_3.position_var.astype(float).as_matrix())**.5\n",
+    "port_std = (df_positions_3.position_var.astype(float).values.T @ df_corr.astype(float).values @ df_positions_3.position_var.astype(float).values)**.5\n",
     "port_var = port_std * var_days**.5  \n",
     "spy_curr_unit_var = float(df_std[df_std.symbol=='SPY'].stdev) * (var_days/256)**.5  * norm.ppf(VAR_CONFIDENCE) \n",
     "sp_dollar_equiv = port_var / spy_curr_unit_var \n",
